static/css/global.css
/* ... */
#submit_form{
  display: flex;
  width: 1000px;
  margin: 0 auto;
  padding: 40px 0;
}
.submit-col{
  width: calc( (100% - 40px) / 2);
  padding: 0 40px;
  box-sizing: border-box;
}
.submit-col.right{
  margin-left: 40px;
}
.text-center{
  text-align: center;
}
.list-item{
  display: flex;
}
.item-order{
  margin-right: 40px;
}
.submit-container input:not([type = 'checkbox']), 
.submit-container textarea{
  width: 100%;
  padding: 5px;
  height: 40px;
}
.submit-container div + input{
  margin-top: 12px;
}
.submit-container ol{
  padding-left: 17px;
}
.submit-container input[type = 'submit']{
  font-size: 16px;
  color: #fff;
  font-family: 'Univers CE 45', Helvetica, Arial, sans-serif;
  display: block;
  width: 100px;
  margin: 0 auto;
  background-color: transparent;
  border: none;
  outline: none;
  cursor: pointer;
  background-color: #00f;
}
.detail #logo_play{
  /*animation: play-hover .35s 6 alternate;*/
  /* 6 = 3*2 */
}
.detail #logo_play svg{
  /*animation: play-svg-scaling .35s 10 alternate*/
}
#detail_download{
  position: fixed;
  bottom: 40px;
  right: 20px;
  font-size: 12px;
  line-height: 14px;
  font-family: 'Univers CE 45', Helvetica, Arial, sans-serif;

}
#detail_download > .download{
  padding-top: 10px;
}
/**/

@keyframes play-bouncing{
  0%
  {
    transform: translate(0, 0);
  }

  100%
  {
    transform: translate(0, 30px);
  }
}

@keyframes play-hover{
  0%
  {
    box-shadow: none;
    z-index: 1001;
  }

  100%
  {
    box-shadow: 0 36px 50px 0 rgba(0,0,0,0.75), 0 36px 100px 0 rgba(0,0,0,0.6);
    z-index: 1001;
  }
}

@keyframes play-svg-scaling{
  0%
  {
    transform: scale(1);
  }

  100%
  {
    transform: scale(1.25);
  }
}

@keyframes play-glowing{
  0%
  {
    background-color:#00F;
  }

  100%
  {
    background-color:#88F;
  }
}





/* vertical iPad / horizontal iPhone */
@media screen and (max-width: 500px) {
  body, #page {
    font-size: 20px;
    /*line-height: 33px;*/
  }
  #nav{
    line-height: 24px;
    font-size: 14px;
  }
  button,
  input[type = 'submit']
  {
    padding: 8px 18px;
  }
  #catalogues{
    padding-left: 20px;
  }
  .home .child{
    width: 100%;
    padding-left: 0 !important;
    padding-right: 0 !important;
  }
  #logo_ctner{
    top: 12px; 
    width: 210px;
    height: 50px;
  }
  #logo_ctner button{
    width: 50px;
    padding-top: 12px;
  }
  #lozenge {
    line-height: inherit;
  }
  #menu_btn {
    margin: 0px;
    width: 40px;
  }
  .meta div {
    padding-right: 20px;
  }
  .meta .size {
    padding-right: 0;
  }
  .about .container{
    font-size: 16px;
    line-height: 1.35em;
  }
  .item-order{
    margin-right: 25px;
  }
  .container {
    flex-direction: column;
  }
	.column-container-container {
		display: block;
    padding-right: 0px !important;
    /* margin: 0px !important; */
	}
	.container:last-child {
		padding-bottom: 44vw;
	}
	.column-container {
    padding-bottom: 0px;
    padding-top: 0px;
    max-width: 100%;
    display: block;
    width: 100%;
	}
  .column-container.right{
    margin-top: 18px;
  }
	.column-container-container:last-child > .column-container {
		padding-bottom: 0px;
	}

	.hidden.column-container {
		display: none;
	}

	.column-container > p:last-child {
		margin-bottom: 0px;
	}
  #submit_form{
    display: block;
    width: auto;
  }
  #catalogue_control{
    margin-top: 75px;
    width: 100%;
  }
  .radio_container{
    display: inline-block;
  }
  .radio_container:last-child{
    margin-left: 10px;
  }
  #filter{
    display: none;
    /*margin-top: 0px;*/
  }
  /*#filter > div{
    display: block;
  }*/
  .list_meta{
    margin-left: 0;
    width: initial;
  }
  #catalogue_container[view='list'] .media_container{
    height: initial;
  }
  #catalogue_container{
    padding-top: 0px;
  }
  #catalogue_container > .child{
    display: block;
  }
  #item_list{
    display: none;
  }
  #catalogue_container > .child .video{
    width: 50%;
  }
  .spreadsheet_meta{
    display: block;
    margin: 0;
    margin-top: 6px;
  }
  .spreadsheet_meta > div > span{
    display: inline-block;
    vertical-align: top;
    width: 70%;
    padding-left: 20px;
  }
  .spreadsheet_meta > div > .meta_tag{
    width: 30%;
    padding: 0;
  }
  #progress_ctner{
    width: 210px;
    top: 65px;
  }
  .detail-container{
    overflow-x: hidden;
  }
  .detail-container video{
    width: initial;
    height: 100%;
    float: right;
  }
  .detail-container .meta{
    top: 75px;
    width: 100vw;
    max-width: 100%;
  }
  #logo_cc{
    width: 16px;
    right: -20px;
  }
}

